webgl context, rough mask overlay

--- a/game/index.html
+++ b/game/index.html
@@ -9,10 +9,15 @@
     <div id="panes">
       <video id="video" width="640" height="480" autoplay></video>
       <canvas id="canvas" width="640" height="480"></canvas>
+      <canvas id="gl" width="640" height="480"></canvas>
     </div>
+
 
     <script src="./node_modules/tracking/build/tracking.js" charset="utf-8"></script>
     <script src="./node_modules/tracking/build/data/eye-min.js"></script>
+    <script src="./js/vendor/gl-matrix.js" charset="utf-8"></script>
+    <script src="./js/vendor/webgl-obj-loader.js" charset="utf-8"></script>
+    <script src="./js/glsetup.js" charset="utf-8"></script>
     <script src="./js/app.js" charset="utf-8"></script>
   </body>
 </html>
