drawing texture from canvas

--- a/game/index.html
+++ b/game/index.html
@@ -10,7 +10,7 @@
       <video id="video" width="640" height="480" autoplay></video>
       <canvas id="gl" width="640" height="480"></canvas>
     </div>
-
+    <canvas id="masksrc" class="" width="512" height="512"></canvas>
 
     <script src="./node_modules/tracking/build/tracking.js" charset="utf-8"></script>
     <script src="./node_modules/tracking/build/data/eye-min.js"></script>
