--- a/game/index.html
+++ b/game/index.html
@@ -2,19 +2,61 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>LD40: Snap N' Score</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div id="vue" v-loaded >
-      <button v-for="maskOption in maskOptions" @click="maskStack.push(maskOption); updateMaskStack()">{{maskOption.name}}</button>
-    </div>
-    <div id="notvue">
-      <div id="panes">
-        <video id="video" width="640" height="480" autoplay></video>
-        <canvas id="gl" width="640" height="480"></canvas>
+    <div id="vue">
+
+      <div class="title" v-show="screen === 'title'">
+        <h1>Welcome!</h1>
+        <p>
+          Intro text here
+        </p>
+        <div>
+          <button @click="screen = 'editor'; startEditor()">START</button>
+        </div>
       </div>
-      <canvas id="masksrc" class="" width="512" height="512"></canvas>
+
+      <div class="editor" v-show="screen === 'editor'">
+        <div class="preview">
+          <div id="panes">
+            <video id="video" width="640" height="480" autoplay></video>
+            <canvas id="gl" width="640" height="480"></canvas>
+          </div>
+          <canvas id="masksrc" class="hidden" width="512" height="512"></canvas>
+        </div>
+        <div class="menu">
+          <div class="menu-buttons">
+            <button v-for="maskOption in maskOptions" @click="maskStack.push(maskOption); updateMaskStack()">{{maskOption.name}}</button>
+            <button @click="clearMaskStack()">clear</button>
+          </div>
+          <div class="menu-stack">
+            <div class="stack-item" v-for="(mask, index) in maskStack">
+              <img :src="mask.url" class="stack-thumb">
+              <b>{{index + ': ' + mask.name}}</b>
+            </div>
+          </div>
+          <button @click="screen = 'filter'; startFilter()">Add a filter</button>
+        </div>
+      </div>
+
+      <div class="filter" v-show="screen === 'filter'">
+        <h1>Filters here oh boy</h1>
+        <button @click="screen = 'score'; startScore()">Score</button>
+      </div>
+
+      <div class="scoring" v-show="screen === 'scoring'">
+        <h1>Let's see how you did</h1>
+        <ul>
+          <li>You were great!</li>
+        </ul>
+        <button>Try again</button>
+        <div class="share-buttons">
+          Twitter Facebook Gplus
+        </div>
+      </div>
+
     </div>
     <script src="./node_modules/vue/dist/vue.js" charset="utf-8"></script>
     <script src="./node_modules/tracking/build/tracking.js" charset="utf-8"></script>
