--- a/game/index.html
+++ b/game/index.html
@@ -8,20 +8,23 @@
   <body>
     <div id="vue">
 
-      <div class="title" v-show="screen === 'title'">
-        <h1>Welcome!</h1>
+      <div class="header">
+        <h1>{{activeStep.title}}</h1>
+        <button class="flow-button" v-show="activeStep.name === 'title'" @click="startEditor()">Start 🡒</button>
+        <button class="flow-button" v-show="activeStep.name === 'editor'" @click="startFilter()">Add a filter 🡒</button>
+        <button class="flow-button" v-show="activeStep.name === 'filter'" @click="startScore()">Rate my selfie 🡒</button>
+        <button class="flow-button" v-show="activeStep.name === 'score'" @click="startTitle()">Start Over 🡒</button>
+      </div>
+
+      <div class="title" v-show="activeStep.name === 'title'">
         <div class="step-body">
           <p>
             Intro text here
           </p>
-          <div>
-            <button class="flow-button" @click="startEditor()">Start 🡒</button>
-          </div>
         </div>
       </div>
 
-      <div class="editor" v-show="screen === 'editor'">
-        <h1>Put stuff on your face</h1>
+      <div class="editor" v-show="activeStep.name === 'editor'">
         <div class="editor-body">
           <div class="preview">
             <div id="panes">
@@ -41,6 +44,8 @@
             </div>
             <div class="menu-buttons" v-show="activemenu === 'buttons'">
               <button v-for="maskOption in maskOptions" @click="maskStack.push(maskOption); updateMaskStack()">{{maskOption.name}}</button>
+              <hr>
+              <button @click="randomMask()">random</button>
               <button @click="clearMaskStack()">clear</button>
             </div>
 
@@ -52,30 +57,27 @@
             </div>
           </div>
         </div>
-        <button class="flow-button" @click="startFilter()">Add a filter 🡒</button>
       </div>
 
-      <div class="filter" v-show="screen === 'filter'">
-        <h1>Add a filter</h1>
+      <div class="filter" v-show="activeStep.name === 'filter'">
         <div class="step-body">
           <div class="filter-body">
             <canvas id="filtercan" width="640" height="480"></canvas>
             <div class="filter-buttons">
               <button v-for="filterOption in filterOptions" @click="selectFilter(filterOption)">{{filterOption.name}}</button>
+              <hr>
+              <button @click="randomFilter()">random</button>
               <button @click="clearFilter()">clear</button>
             </div>
           </div>
-          <button class="flow-button" @click="startScore()">Score 🡒</button>
         </div>
       </div>
 
-      <div class="score" v-show="screen === 'score'">
-        <h1>Let's see how you did</h1>
+      <div class="score" v-show="activeStep.name === 'score'">
         <div class="step-body">
           <ul>
             <li>You were great!</li>
           </ul>
-          <button class="flow-button" @click="clearMaskStack(); startEditor()">Start Over 🡒</button>
           <div class="share-buttons">
             Twitter Facebook Gplus
           </div>
