Added an explanation, link to my site, more CSS fixes

--- a/game/index.html
+++ b/game/index.html
@@ -19,7 +19,10 @@
       <div class="title" v-show="activeStep.name === 'title'">
         <div class="step-body">
           <p>
-            Intro text here
+            Greetings and welcome to <em>Snap N' Score</em>, where the name of the game is overindulgent selfies.
+          </p>
+          <p>
+            Use accessories and filters to make your selfie stand out from the crowd, and share your score with friends!
           </p>
         </div>
       </div>
@@ -86,6 +89,9 @@
           </h1>
           <div class="share-buttons">
             Twitter Facebook Gplus
+          </div>
+          <div class="">
+            <a href="https://www.hypothete.com" target="_blank" noreferrer>2017 hypothete.com</a>
           </div>
         </div>
       </div>
