fixed bug where no-filter selfies weren't downloadable

--- a/game/index.html
+++ b/game/index.html
@@ -88,6 +88,7 @@
             <li>Jaunty angles: {{jauntyScore}} points</li>
             <li>Cropping: {{faceSizeScore}} points</li>
             <li>Accessories: {{maskScore}} points</li>
+            <li>Sweet filter: {{filterScore}} points</li>
           </ul>
           <h1>
             <i>Total: {{totalScore}} points</i>
